Add player stats panel and enhance investment card styles with animations
- Introduced a new stats panel with grid layout for displaying player statistics.
- Added hover effects and animations for investment cards to improve interactivity.
- Implemented various keyframe animations for game elements, including success and error states.
- Enhanced responsiveness for smaller screens in the stats panel.
- Updated styles for buttons and interactive elements to include hover effects and transitions.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       </div>
       <h1 id="page-title">Home</h1>
       <div class="profile-icon">
-        <i class="fas fa-user-circle"></i>
+        <button id="profile-btn" style="background: none; border: none; color: #fff; cursor: pointer;">
+          <i class="fas fa-user-circle"></i>
+        </button>
       </div>
     </header>
 
@@ -89,7 +91,7 @@
           <h2>💰 Red Light, Green Light Savings</h2>
           <div class="balance-card">
             <h3>Available Cash</h3>
-            <div class="amount">₩456,000,000</div>
+            <div class="amount" id="available-cash">₩456,000,000</div>
             <p class="subtitle">Player #456 Balance</p>
           </div>
           <div class="actions">
